--- a/html/blog.html
+++ b/html/blog.html
@@ -6,5 +6,20 @@
     <link rel="stylesheet" href="/css/blog.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="top-bar">
+      <div class="con h100p">
+        <nav class="top-bar__menu-box1 h100p">
+          <ul class="flex h100p">
+            <li><a href="#" class="flex flex-jc flex-ai h100p">menu1</a></li>
+            <li><a href="#" class="flex flex-jc flex-ai h100p">menu2</a></li>
+            <li><a href="#" class="flex flex-jc flex-ai h100p">menu3</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="mom">
+      <div class="son"><a href=""></a></div>
+    </div>
+  </body>
 </html>
