--- a/index.html
+++ b/index.html
@@ -6,6 +6,214 @@
     <title>chae-blog</title>
   </head>
   <body>
-    <h1>ho ho ho</h1>
+    <div class="logo-box">
+      <a href="#"><img src="/html-structure/images/logo.PNG" alt="" /></a>
+    </div>
+
+    <div class="navi con">
+      <ul>
+        |
+        <li><a href="#">BRAND </a></li>
+        |
+        <li><a href="#"> VISUAL </a></li>
+        |
+        <li><a href="#"> STYLE </a></li>
+        |
+        <li><a href="#"> MEDIA </a></li>
+        |
+        <li><a href="#"> NEWS </a></li>
+        |
+        <li><a href="#"> STORE </a></li>
+        |
+        <li><a href="#"> CUSTOMER </a></li>
+        |
+      </ul>
+    </div>
+
+    <div class="top-image con">
+      <div class="top-image-box">
+        <img src="/html-structure/images/bb.PNG" alt="" />
+      </div>
+    </div>
+
+    <div class="prod-list con">
+      <ul class="row">
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+        <li class="cell">
+          <div class="image-box">
+            <img src="/html-structure/images/cc.PNG" alt="" />
+          </div>
+          <div class="prod-name">고앵쓰와 호박쓰</div>
+          <div class="prod-price">2,000,000</div>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
