--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/index.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chae-blog</title>
   </head>
   <body>
     <div class="logo-box">
-      <a href="#"><img src="/html-structure/images/logo.PNG" alt="" /></a>
+      <a href="#"><img src="/images/logo.PNG" alt="" /></a>
     </div>
 
     <div class="navi con">
@@ -32,7 +33,7 @@
 
     <div class="top-image con">
       <div class="top-image-box">
-        <img src="/html-structure/images/bb.PNG" alt="" />
+        <img src="/images/bb.PNG" alt="" />
       </div>
     </div>
 
@@ -40,175 +41,147 @@
       <ul class="row">
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
         </li>
         <li class="cell">
           <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
-          </div>
-          <div class="prod-name">고앵쓰와 호박쓰</div>
-          <div class="prod-price">2,000,000</div>
-        </li>
-        <li class="cell">
-          <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
-          </div>
-          <div class="prod-name">고앵쓰와 호박쓰</div>
-          <div class="prod-price">2,000,000</div>
-        </li>
-        <li class="cell">
-          <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
-          </div>
-          <div class="prod-name">고앵쓰와 호박쓰</div>
-          <div class="prod-price">2,000,000</div>
-        </li>
-        <li class="cell">
-          <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
-          </div>
-          <div class="prod-name">고앵쓰와 호박쓰</div>
-          <div class="prod-price">2,000,000</div>
-        </li>
-        <li class="cell">
-          <div class="image-box">
-            <img src="/html-structure/images/cc.PNG" alt="" />
+            <img src="/images/cc.PNG" alt="" />
           </div>
           <div class="prod-name">고앵쓰와 호박쓰</div>
           <div class="prod-price">2,000,000</div>
